examples/test/testpolicy12192.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12192
  namespace: namespace475
spec:
  podSelector:
    matchLabels:
      key43: value43
      key10: value20
      key46: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value44
          key7: value23
      podSelector:
        matchLabels:
          key43: value32
          key42: value47
